--- a/portfolio.html
+++ b/portfolio.html
@@ -82,10 +82,7 @@
               <div class="portfolio-wrap">
                 <img src="assets/img/_MG_94861.JPG" class="img-fluid" alt="" />
                 <div class="portfolio-info">
-                  <p>Mengikuti Seminar One Day Informatics</p>
-                  <div class="portfolio-links">
-                    <a href="assets/img/_MG_94861.JPG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Mengikuti Seminar One Day Informatics tanggal 7 November 2021"><i class="bx bx-plus"></i></a>
-                  </div>
+                  <p>Seminar One Day Informatics</p>
                 </div>
               </div>
             </div>
