--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
 
         <nav id="navbar" class="navbar order-last order-lg-0">
           <ul>
-            <li><a href="about.html">About</a></li>
+            <li><a class="active" href="about.html">About</a></li>
             <li><a href="Education.html">Education</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
             <li><a href="contact.html">Contact</a></li>
