--- a/Education.html
+++ b/Education.html
@@ -74,7 +74,7 @@
 
         <div class="section-title">
           <h2>Education</h2>
-          <p>Ringkasan Sekilas Tentang Pendidikan</p>
+          <p>Ringkasan Sekilas Tentang Pendidikan :</p>
         
         <div class="row mt-2">
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
