--- a/portfolio.html
+++ b/portfolio.html
@@ -82,7 +82,7 @@
               <div class="portfolio-wrap">
                 <img src="assets/img/_MG_9486.JPG" class="img-fluid" alt="" />
                 <div class="portfolio-info">
-                  <p>Seminar One Day Informatics</p>
+                  <p>Seminar One Day Informatics 2021</p>
                 </div>
               </div>
             </div>
