--- a/portfolio.html
+++ b/portfolio.html
@@ -83,6 +83,9 @@
                 <img src="assets/img/_MG_9486.JPG" class="img-fluid" alt="" />
                 <div class="portfolio-info">
                   <p>Seminar One Day Informatics 2021</p>
+                  <div class="portfolio-links">
+                    <a href="assets/img/_MG_9486.JPG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Belajar CRUD di Youtube"><i class="bx bx-plus"></i></a>
+                  </div>
                 </div>
               </div>
             </div>
@@ -92,6 +95,7 @@
                 <img src="assets/img/ukm 1.JPG" class="img-fluid" alt="" />
               </div>
             </div>
+
             <div class="col-lg-4 col-md-6 portfolio-item filter-web">
               <div class="portfolio-wrap">
                 <img src="assets/img/ukm 2.JPG" class="img-fluid" alt="" />
