--- a/portfolio.html
+++ b/portfolio.html
@@ -80,11 +80,11 @@
           <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
             <div class="col-lg-4 col-md-6 portfolio-item filter-app">
               <div class="portfolio-wrap">
-                <img src="assets/img/_MG_9486.JPG" class="img-fluid" alt="" />
+                <img src="assets/img/seminar1.JPG" class="img-fluid" alt="" />
                 <div class="portfolio-info">
                   <p>Seminar One Day Informatics 2021</p>
                   <div class="portfolio-links">
-                    <a href="assets/img/_MG_9486.JPG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Belajar CRUD di Youtube"><i class="bx bx-plus"></i></a>
+                    <a href="assets/img/seminar1.JPG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Seminar One Day Informatics"><i class="bx bx-plus"></i></a>
                   </div>
                 </div>
               </div>
