--- a/portfolio.html
+++ b/portfolio.html
@@ -70,9 +70,8 @@
           <div class="row" data-aos="fade-up" data-aos-delay="100">
             <div class="col-lg-12 d-flex justify-content-center">
               <ul id="portfolio-flters">
-                <li data-filter=".filter-app">Seminar</li>
                 <li data-filter=".filter-card">Jualan & Hasil Belajar</li>
-                <li data-filter=".filter-web">Album Foto</li>
+                <li data-filter=".filter-web">Seminar & Album Foto</li>
               </ul>
             </div>
           </div>
